# SynergyX-AI

./: LICENSE  README.md  start.sh
backend/: pyproject.toml  seed_cvs.py  synergyx.db
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: projects.py  talent.py  teams.py
backend/app/services/: cv_parser.py  matching.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  modal.tsx  textarea.tsx
frontend/src/pages/: HomePage.tsx  ProjectPage.tsx  TalentPoolPage.tsx
